# final

./: .gitignore  README.md  docker-compose.yml  init.sql
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  enums.py  main.py
backend/app/lining_board/: model.py  repository.py  router.py  schemas.py  service.py
cutting_service/: Dockerfile  main.py  requirements.txt
cutting_service/app/core/: config.py  database.py
cutting_service/app/models/: board.py  cut_plan.py  defect.py  price_list.py
cutting_service/app/routers/: boards.py  cut_plans.py  prices.py
cutting_service/app/schemas/: board.py  cut_plan.py  defect.py  price_list.py
cutting_service/app/services/: board_aggregator.py  cutting_algorithm.py  price_service.py  redis_listener.py
defect_detector/: Dockerfile  requirements.txt
defect_detector/app/: main.py
defect_detector/app/core/: config.py  dependencies.py
defect_detector/app/models/: schemas.py
defect_detector/app/routers/: camera.py  test.py
defect_detector/app/services/: coordinate_converter.py  defect_detector.py  frame_processor.py  publisher.py  state_classifier.py  state_detector.py  task_manager.py  video_source.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/components/: BoardVisualizationModal.tsx  EditBoardModal.tsx  MetricCard.tsx  QualityBadge.tsx
frontend/src/app/pages/: BoardsList.tsx  Dashboard.tsx
frontend/src/app/services/: api.ts
frontend/src/app/types/: board.ts
frontend/src/styles/: fonts.css
