[project]
name = "lining-board-quality"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]~=0.135.3",
    "alembic~=1.18.4",
    "pydantic~=2.12.5",
    "sqlalchemy~=2.0.49",
    "asyncpg~=0.31.0",
    "python-dotenv~=1.2.2",
    "psycopg2-binary~=2.9.11",
    "aiokafka~=0.12.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
